# D-PAD

./: .gitignore  pyproject.toml  requirements.txt
scripts/: download_datasets.sh
